manifests/vzazovnik/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: etherpad
  namespace: etherpad
spec:
  replicas: 1
  selector:
    matchLabels:
      app: etherpad
  template:
    metadata:
      labels:
        app: etherpad
    spec:
      containers:
      - name: etherpad
        image: etherpad/etherpad:latest
        ports:
        - containerPort: 9001
