manifests/vzazovnik/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: etherpad
  namespace: etherpad
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: etherpad.techdev.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: etherpad
                port:
                  number: 80
